--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
-asgiref
-Django
-Pillow
-sqlparse
-tzdata
+asgiref==3.6.0
+beautifulsoup4==4.12.2
+bs4==0.0.1
+certifi==2023.5.7
+charset-normalizer==3.1.0
+Django==4.2
+idna==3.4
+Pillow==9.5.0
+requests==2.31.0
+soupsieve==2.4.1
+sqlparse==0.4.4
+tzdata==2023.3
+urllib3==2.0.3
